// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Danish language picker renders without 💥 1`] = `
<div
  class="css-1prqaxz-Wrapper e1g7xtvp0"
>
  <div
    class="css-14fi736-ActiveOption e1g7xtvp1"
    color="black"
  >
    Da
  </div>
  <span
    class="css-1tysqfo-Divider e1g7xtvp3"
    color="black"
  />
  <a
    class="css-s5uyen-LinkOption e1g7xtvp2"
    color="black"
    href="/dk-en/new-member"
  >
    En
  </a>
</div>
`;

exports[`Norwegian language picker renders without 💥 1`] = `
<div
  class="css-1prqaxz-Wrapper e1g7xtvp0"
>
  <div
    class="css-14fi736-ActiveOption e1g7xtvp1"
    color="black"
  >
    No
  </div>
  <span
    class="css-1tysqfo-Divider e1g7xtvp3"
    color="black"
  />
  <a
    class="css-s5uyen-LinkOption e1g7xtvp2"
    color="black"
    href="/no-en/new-member"
  >
    En
  </a>
</div>
`;

exports[`Swedish language picker renders without 💥 1`] = `
<div
  class="css-1prqaxz-Wrapper e1g7xtvp0"
>
  <div
    class="css-14fi736-ActiveOption e1g7xtvp1"
    color="black"
  >
    Sv
  </div>
  <span
    class="css-1tysqfo-Divider e1g7xtvp3"
    color="black"
  />
  <a
    class="css-s5uyen-LinkOption e1g7xtvp2"
    color="black"
    href="/se-en/new-member"
  >
    En
  </a>
</div>
`;
